[package]
name = "undetected-chromedriver"
version = "0.1.2"
edition = "2021"
description = "An undetected implementation of thirtyfour."
repository = "https://github.com/Ulyssedev/Rust-undetected-chromedriver"
license = "MIT"
readme = "README.md"

[dependencies]
async-trait = "0.1.74"
rand = "0.8.5"
reqwest = "0.11.18"
serde_json = "1.0.105"
thirtyfour = "0.31.0"
tokio = "1.28.2"
tracing = "0.1.40"
zip = "0.6.6"
